<resources>
    <string name="app_name">Praja20</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="job_numbre">Job Number</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="forgot_password">"Forgot password?"</string>
    <string name="send">"Send password"</string>
    <string name="RecoveryPassword">"Enter your Email to received reset link"</string>
    <string name="Login">"Login"</string>
    <string name="sign_in">"Sign in"</string>
    <string name="pass">"Enter your password"</string>
    <string name="email">"Enter your Email"</string>
    <string name="namePersonal">"Name:"</string>
    <string name="email_personal">"Enter your Email"</string>
    <string name="error_invalid_email">Invalid_email</string>
    <string name="error_invalid_password">The password is very short</string>
    <string name="error_incorrect_password">Incorrect password</string>
    <string name="error_field_required">Field required</string>
    <string name="pass_personal">"Enter your password"</string>
    <string name="id_personal">"ID"</string>
    <string name="save_personal">"SAVE"</string>
    <string name="format_job">"Enter format"</string>
    <string name="finishSize_job">"Enter Finish Size"</string>
    <string name="mul_job">"Enter mul"</string>
    <string name="file_job">"Enter files"</string>
    <string name="formatMachine_job">"Enter format"</string>
    <string name="ingMachine_job">"assign"</string>
    <string name="btnAsig_job">"Assign Job"</string>
    <string name="p_job">"P"</string>
    <string name="numberJob_order">"Enter job number"</string>
    <string name="customer_order">"Enter customer name"</string>
    <string name="title_order">"Enter title"</string>
    <string name="description_order">"Enter description"</string>
    <string name="custJob_order">"Enter CustJob"</string>
    <string name="dueDate_order">"Due Date"</string>
    <string name="dueTime_order">"Due Time"</string>
    <string name="dateIn_order">"Date in"</string>
    <string name="timeIn_order">"Time in"</string>
    <string name="qty_Job">"Qty"</string>
    <string name="pageCount_job">"Page Count"</string>
    <string name="cv_job">"CV"</string>
    <string name="text_job">"TEXT"</string>
    <string name="stock_job">"STOCK"</string>
    <string name="ink_job">"INK"</string>
    <string name="registrarSupervisor_supervisor">"Supervisor"</string>
    <string name="registrar_Trabajo">"register Job"</string>
    <string name="listaPend_job">"List Pendents"</string>

    <string name="numberJob_detalle">"Job Number:"</string>
    <string name="JobName_detalle">"Job Name:"</string>
    <string name="customer_detalle">"Customer:"</string>
    <string name="mul_detalle">"Mul:"</string>
    <string name="qty_detalle">"Qty:"</string>
    <string name="pageCount_detalle">"Pages Count:"</string>
    <string name="text_detalle">"Text:"</string>
    <string name="format_detalle">"format"</string>
    <string name="stock_detalle">"Stock:"</string>
    <string name="ink_detalle">"INK:"</string>
    <string name="finishSize_detalle">"Finish Size:"</string>
    <string name="binding_detalle">"Binding:"</string>
    <string name="dueDate_detalle">"Due Date:"</string>
    <string name="comments_detalle">"Comments:"</string>
    <string name="estado_detalle">"Estado:"</string>
    <string name="files_detalle">"Files"</string>
    <string name="p_detalle">"p"</string>
    <string name="press_detalle">"Press"</string>
    <string name="sign_detalle">"Sign"</string>
    <string name="sample_detalle">"Sample"</string>
    <string name="layout_detalle">"Layout"</string>
    <string name="checkIn_detalle">"Check in"</string>
    <string name="volver">"Back"</string>

    <string name="registro_empleados">"Register User"</string>
    <string name="registro_job">"Register Job"</string>
    <string name="list_Pendientes">Pendant Job</string>
    <string name="lista_Process">Job in progress</string>
    <string name="title_activity_principal_supervisor">PrincipalSupervisor</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="update">UPDATE</string>
    <string name="pause"></string>
    <string name="lista_paused">Paused Job</string>
    <string name="lista_finished">Finished Job</string>
    <string name="cambiar">Change</string>
    <string name="home_second">Home</string>
    <string name="ListPendent">Pendent</string>
    <string name="ListPaused">Paused</string>
    <string name="ListFinished">Finished</string>
    <string name="ListProcess">In process</string>
    <string name="registerJob">register job</string>
    <string name="registerPersonal">create Account</string>
    <string name="finished">Finished?</string>
    <string name="cerrar_sesion">Sign out</string>
    <string name="qa_list">QaList</string>
</resources>
