<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.DetalleListaQa">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="86dp"
                android:layout_height="24dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="50dp"
                android:text="@string/numberJob_detalle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/numberJob_process"
                android:layout_width="250dp"
                android:layout_height="24dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="13dp"
                android:editable="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="86dp"
                android:layout_height="24dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="10dp"
                android:text="@string/JobName_detalle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/jobName_process"
                android:layout_width="250dp"
                android:layout_height="24dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="13dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/numberJob_process" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="86dp"
                android:layout_height="24dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="10dp"
                android:text="@string/customer_detalle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <TextView
                android:id="@+id/customer_process"
                android:layout_width="250dp"
                android:layout_height="24dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="13dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView6"
                app:layout_constraintTop_toBottomOf="@+id/jobName_process" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="86dp"
                android:layout_height="24dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="10dp"
                android:text="@string/mul_detalle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <TextView
                android:id="@+id/mul_process"
                android:layout_width="250dp"
                android:layout_height="24dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="13dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView10"
                app:layout_constraintTop_toBottomOf="@+id/customer_process" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="86dp"
                android:layout_height="24dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="10dp"
                android:text="@string/qty_detalle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />

            <TextView
                android:id="@+id/qty_process"
                android:layout_width="250dp"
                android:layout_height="24dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="13dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView11"
                app:layout_constraintTop_toBottomOf="@+id/mul_process" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="86dp"
                android:layout_height="24dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="10dp"
                android:text="@string/pageCount_detalle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView11" />

            <TextView
                android:id="@+id/pageCount_process"
                android:layout_width="250dp"
                android:layout_height="24dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="13dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView13"
                app:layout_constraintTop_toBottomOf="@+id/qty_process" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="86dp"
                android:layout_height="24dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="10dp"
                android:text="@string/cv_job"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView13" />

            <TextView
                android:id="@+id/cv_process"
                android:layout_width="250dp"
                android:layout_height="24dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="13dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView15"
                app:layout_constraintTop_toBottomOf="@+id/pageCount_process" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="86dp"
                android:layout_height="24dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="10dp"
                android:text="@string/text_detalle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView15" />

            <TextView
                android:id="@+id/text_process"
                android:layout_width="250dp"
                android:layout_height="24dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="13dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView17"
                app:layout_constraintTop_toBottomOf="@+id/cv_process" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="86dp"
                android:layout_height="24dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="10dp"
                android:text="@string/format_detalle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView17" />

            <TextView
                android:id="@+id/format_process"
                android:layout_width="250dp"
                android:layout_height="24dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="13dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView19"
                app:layout_constraintTop_toBottomOf="@+id/text_process" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="86dp"
                android:layout_height="24dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="10dp"
                android:text="@string/stock_detalle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView19" />

            <TextView
                android:id="@+id/stock_process"
                android:layout_width="250dp"
                android:layout_height="24dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="13dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView21"
                app:layout_constraintTop_toBottomOf="@+id/format_process" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="86dp"
                android:layout_height="24dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="10dp"
                android:text="@string/ink_detalle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView21" />

            <TextView
                android:id="@+id/ink_process"
                android:layout_width="250dp"
                android:layout_height="24dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="13dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView23"
                app:layout_constraintTop_toBottomOf="@+id/stock_process" />

            <TextView
                android:id="@+id/textView26"
                android:layout_width="86dp"
                android:layout_height="24dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="10dp"
                android:text="@string/finishSize_detalle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView23" />

            <TextView
                android:id="@+id/finishSize_process"
                android:layout_width="250dp"
                android:layout_height="24dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="13dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView26"
                app:layout_constraintTop_toBottomOf="@+id/ink_process" />

            <TextView
                android:id="@+id/textView28"
                android:layout_width="86dp"
                android:layout_height="24dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="10dp"
                android:text="@string/binding_detalle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView26" />

            <TextView
                android:id="@+id/binding_process"
                android:layout_width="250dp"
                android:layout_height="24dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="13dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView28"
                app:layout_constraintTop_toBottomOf="@+id/finishSize_process" />

            <TextView
                android:id="@+id/textView30"
                android:layout_width="86dp"
                android:layout_height="24dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="10dp"
                android:text="@string/dueDate_detalle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView28" />

            <TextView
                android:id="@+id/dueDate_process"
                android:layout_width="250dp"
                android:layout_height="24dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="13dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView30"
                app:layout_constraintTop_toBottomOf="@+id/binding_process" />

            <TextView
                android:id="@+id/textView32"
                android:layout_width="86dp"
                android:layout_height="24dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="10dp"
                android:text="@string/estado_detalle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView30" />

            <TextView
                android:id="@+id/estado_process"
                android:layout_width="250dp"
                android:layout_height="24dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="13dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView32"
                app:layout_constraintTop_toBottomOf="@+id/dueDate_process" />

            <TextView
                android:id="@+id/textView34"
                android:layout_width="86dp"
                android:layout_height="24dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="10dp"
                android:text="@string/comments_detalle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView32" />

            <TextView
                android:id="@+id/comments_process"
                android:layout_width="250dp"
                android:layout_height="100dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="13dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.571"
                app:layout_constraintStart_toEndOf="@+id/textView34"
                app:layout_constraintTop_toBottomOf="@+id/estado_process" />

            <Button
                android:id="@+id/btnChange"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="13dp"
                android:layout_marginBottom="50dp"
                android:text="@string/cambiar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/comments_process"
                app:layout_constraintVertical_bias="1.0" />

            <CheckBox
                android:id="@+id/finishCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="50dp"
                android:text="@string/finished"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnChange"
                app:layout_constraintStart_toEndOf="@+id/textView34"
                app:layout_constraintTop_toBottomOf="@+id/comments_process" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>